@@ -9,12 +9,6 @@ import TreeNode from './TreeNode'
 
 # TreeNode
 
+TreeNode fetches data from server and render them in a tree.
+
 <Props table={true} of={TreeNode} />
-
-
-
-## Basic usage
-
-<Playground>
-
-</Playground>
